Changes for 4.0.4rc1

New features:
...G...... [ZBX-14876] added a new optional parameter <regex_excl_dir> to items vfs.dir.size[] and vfs.dir.count[] (viktors)

Bug fixes:
A......... [ZBX-15156] fixed undefined offset error in host screen with web item (talbergs)
A......... [ZBX-14980] fixed problem with filter by itemids and hostids in history.get (vasilijs, vmurzins)
...G...... [ZBX-14624] fixed agent collector not releasing connection to missing/removed disk devices (Andris, yurii)
........S. [ZBX-15279] fixed handling of LLD processing errors that should have resulted in not supported LLD rule state (wiper)
........S. [ZBX-15241] fixed escaping regexp symbols in preprocessing output parameter when creating item by LLD (asitals)
..F....... [ZBX-14604] fixed displayng of the graph name on screens (miks)
..F....... [ZBXNEXT-4588] renamed 'display options' tab to 'displaying options'; fixed multiple layout issues, footnote in hint-box, field value handling, calculation of mouse position, multiple issues related with Y axis and problem styling (miks)
..F....... [ZBX-15159] fixed existing context menu closing when new one is opened (miks)
..F....... [ZBX-15233] renamed fuzzytime() function description in dropdown list (Ivo)
...G...... [ZBX-12801] excluded zabbix_sender.dll from MS Windows builds with TLS (viktors)
..F....... [ZBXNEXT-4883] fixed when trigger in problem state hides all dependent triggers in history view (vasilijs)
...G...... [ZBX-15260] improved misleading warning message when agent fails to find log file during processing logrt[] item (asitals)
.........T [ZBX-15258] fixed update interval of "Zabbix queue" item in server's template to be consistent with proxy template, added missing units in proxy template (asitals)
...G...... [ZBX-15225] improved handling of timeouts in "vfs.dir.size" and "vfs.dir.count" items on Windows agent (asitals)

--------------------------------------------------------------------------------
Changes for 4.0.3
